--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -23,11 +23,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run yamllint
-        uses: frenck/action-yamllint@v1
-
       - name: Run ansible-later
         uses: patrickjahns/ansible-later-action@v1.3.0
+
+      - name: Run ansible-lint
+        uses: ansible/ansible-lint@v6
 
   molecule:
     runs-on: ubuntu-latest
