--- a/roles/nox/tasks/02-install.yml
+++ b/roles/nox/tasks/02-install.yml
@@ -48,6 +48,7 @@
       file:
         path: "{{ role_path }}/files/nox/{{ _nox_version }}"
         state: directory
+        mode: 0644
 
     - name: download nox release binary
       get_url:
@@ -61,6 +62,7 @@
 
     - name: propagate nox release binary
       become: true
+      become_user: root
       run_once: false
       delegate_to: "{{ inventory_hostname }}"
       copy:
@@ -124,6 +126,7 @@
 
     - name: propagate nox artifact binary
       become: true
+      become_user: root
       run_once: false
       delegate_to: "{{ inventory_hostname }}"
       copy:
