--- a/roles/ipfs_cli/meta/main.yml
+++ b/roles/ipfs_cli/meta/main.yml
@@ -2,9 +2,10 @@ galaxy_info:
   namespace: fluencelabs
   role_name: ipfs_cli
   author: Anatolios Laskaris
+  license: Apache-2.0
   description: Downloads IPFS CLI used by Nox
   issue_tracker_url: https://github.com/fluencelabs/ansible/issues
-  min_ansible_version: 2.12
+  min_ansible_version: 2.16
 
   platforms:
     - name: Ubuntu
