--- a/roles/nox/tasks/02-install.yml
+++ b/roles/nox/tasks/02-install.yml
@@ -1,11 +1,11 @@
 - name: create nox system group
-  group:
+  ansible.builtin.group:
     name: "{{ nox_group }}"
     system: true
     state: present
 
 - name: create nox system user
-  user:
+  ansible.builtin.user:
     name: "{{ nox_user }}"
     system: true
     shell: "/sbin/nologin"
@@ -14,7 +14,7 @@
     state: present
 
 - name: cleanup nox state
-  file:
+  ansible.builtin.file:
     path: "{{ nox_dir }}/nox-{{ instance }}"
     state: absent
   when: nox_cleanup_state
@@ -24,7 +24,7 @@
     label: "nox-{{ instance }}"
 
 - name: create nox directories
-  file:
+  ansible.builtin.file:
     path: "{{ nox_dir }}/nox-{{ instance }}/state"
     state: directory
     owner: "{{ nox_user }}"
@@ -45,13 +45,13 @@
       become: false
       run_once: true
       delegate_to: localhost
-      file:
+      ansible.builtin.file:
         path: "{{ role_path }}/files/nox/{{ _nox_version }}"
         state: directory
         mode: 0644
 
     - name: download nox release binary
-      get_url:
+      ansible.builtin.get_url:
         url: "{{ _nox_download_url }}/{{ _nox_bin }}"
         dest: "{{ role_path }}/files/nox/{{ _nox_version }}/{{ _nox_bin }}"
         checksum: "{{ _nox_checksums }}"
@@ -65,7 +65,7 @@
       become_user: root
       run_once: false
       delegate_to: "{{ inventory_hostname }}"
-      copy:
+      ansible.builtin.copy:
         src: "{{ role_path }}/files/nox/{{ _nox_version }}/{{ _nox_bin }}"
         dest: "{{ nox_dir }}/nox-{{ instance }}/nox"
         owner: "{{ nox_user }}"
@@ -87,7 +87,7 @@
   when: nox_run_id | string | length
   block:
     - name: get list of artifacts from GitHub API
-      uri:
+      ansible.builtin.uri:
         url: "https://api.github.com/repos/fluencelabs/nox/actions/runs/{{ nox_run_id }}/artifacts"
         method: GET
         headers:
@@ -96,7 +96,7 @@
       register: _artifacts_response
 
     - name: parse the artifact download URL
-      set_fact:
+      ansible.builtin.set_fact:
         _artifact_download_url: "{{ item.archive_download_url }}"
       loop: "{{ _artifacts_response.json.artifacts }}"
       when: "item.name == _bin"
@@ -104,12 +104,12 @@
         label: "{{ item.url }}"
 
     - name: create a temporary directory
-      tempfile:
+      ansible.builtin.tempfile:
         state: directory
       register: _artifact_temp_dir
 
     - name: download the artifact
-      get_url:
+      ansible.builtin.get_url:
         url: "{{ _artifact_download_url }}"
         dest: "{{ _artifact_temp_dir.path }}/{{ _nox_bin }}.zip"
         headers:
@@ -120,7 +120,7 @@
       delay: 2
 
     - name: unarchive the downloaded artifact
-      unarchive:
+      ansible.builtin.unarchive:
         src: "{{ _artifact_temp_dir.path }}/{{ _nox_bin }}.zip"
         dest: "{{ _artifact_temp_dir.path }}/"
 
@@ -129,7 +129,7 @@
       become_user: root
       run_once: false
       delegate_to: "{{ inventory_hostname }}"
-      copy:
+      ansible.builtin.copy:
         src: "{{ _artifact_temp_dir.path }}/nox"
         dest: "{{ nox_dir }}/nox-{{ instance }}/nox"
         owner: "{{ nox_user }}"
@@ -143,15 +143,14 @@
       register: _binary_snapshot
 
   always:
-
     - name: remove temporary directory
-      file:
+      ansible.builtin.file:
         path: "{{ _artifact_temp_dir.path }}"
         state: absent
       when: _artifact_temp_dir.path is defined
 
 - name: copy nox config
-  template:
+  ansible.builtin.template:
     src: "files/{{ nox_project_dir }}/configs/nox-{{ instance }}_Config.toml"
     dest: "{{ nox_dir }}/nox-{{ instance }}/Config.toml"
     owner: "{{ nox_user }}"
@@ -165,7 +164,7 @@
   register: _config
 
 - name: copy nox secret
-  template:
+  ansible.builtin.template:
     src: "files/{{ nox_project_dir }}/secrets/nox-{{ instance }}.txt"
     dest: "{{ nox_dir }}/nox-{{ instance }}/state/root_secret_key.ed25519"
     owner: "{{ nox_user }}"
@@ -179,7 +178,7 @@
   register: _secret
 
 - name: create nox unit file
-  copy:
+  ansible.builtin.copy:
     content: "{{ nox_unit_file }}"
     dest: "/etc/systemd/system/nox-@.service"
     owner: root
@@ -188,7 +187,7 @@
   register: _systemd
 
 - name: enable noxes
-  systemd:
+  ansible.builtin.systemd:
     name: nox-@{{ instance }}
     enabled: true
     daemon_reload: true
@@ -204,5 +203,5 @@
     _config_changed: "{{ _config.results | selectattr('changed', 'equalto', true) | map(attribute='instance') | list }}"
     _secret_changed: "{{ _secret.results | selectattr('changed', 'equalto', true) | map(attribute='instance') | list }}"
     _instances_changed: "{{ (_systemd is changed) | ternary(nox_instances, _binary_release_changed + _binary_snapshot_changed + _config_changed + _secret_changed) }}"
-  set_fact:
+  ansible.builtin.set_fact:
     _instances_to_restart: "{{ (nox_instances | select('in', _instances_changed) | list) | unique }}"
