--- a/roles/nox/tasks/01-cleanup.yml
+++ b/roles/nox/tasks/01-cleanup.yml
@@ -1,5 +1,5 @@
 - name: get list of all running nox instances
-  command: systemctl list-units --type=service --no-legend --no-pager nox-@*
+  ansible.builtin.command: systemctl list-units --type=service --no-legend --no-pager nox-@*
   register: _running_instances
   changed_when: false
 
@@ -8,19 +8,19 @@
    _present_instances: "{{ _running_instances.stdout_lines
                            | map('regex_replace', '.*?nox-@([^\\s]+)\\.service.*', '\\1')
                            | list }}"
-  set_fact:
+  ansible.builtin.set_fact:
     _cleanup_instances: "{{ _present_instances | difference(nox_instances) | default([]) }}"
   changed_when: false
 
 - name: instances to cleanup
-  debug:
+  ansible.builtin.debug:
     msg: "{{ _cleanup_instances }}"
 
 - name: cleanup nox instances
   when: _cleanup_instances | length
   block:
     - name: stop and disable noxes
-      systemd:
+      ansible.builtin.systemd:
         name: nox-@{{ instance }}
         enabled: false
         state: stopped
@@ -30,7 +30,7 @@
         label: "nox-{{ instance }}"
 
     - name: cleanup nox directories
-      file:
+      ansible.builtin.file:
         path: "{{ nox_dir }}/nox-{{ instance }}"
         state: absent
       loop: "{{ _cleanup_instances }}"
