--- a/roles/nox/meta/main.yml
+++ b/roles/nox/meta/main.yml
@@ -5,7 +5,7 @@ galaxy_info:
   author: Anatolios Laskaris
   description: Install and setup Nox - Rust implementation of the Fluence network peer
   issue_tracker_url: https://github.com/fluencelabs/ansible/issues
-  min_ansible_version: 2.16
+  min_ansible_version: "2.16"
 
   platforms:
     - name: Ubuntu
