--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -30,6 +30,8 @@ jobs:
 
       - name: Run ansible-lint
         uses: reviewdog/action-ansiblelint@v1
+        with:
+          reporter: github-pr-check
 
   molecule:
     runs-on: ubuntu-latest
