--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -32,6 +32,7 @@ jobs:
         uses: reviewdog/action-ansiblelint@v1
         with:
           reporter: github-pr-check
+          fail_on_error: true
 
   molecule:
     runs-on: ubuntu-latest
@@ -65,5 +66,5 @@ jobs:
         run: python -m pip install -r requirements.txt
 
       - name: Run ${{ matrix.scenario }} scenario
-        working-directory: extentions
+        working-directory: extensions
         run: molecule test --scenario-name "${{ matrix.scenario }}"
