--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 **/files/**
 !extentions/molecule/files/molecule/**
-!extentions/molecule/files/molecule/.fluence
+!extentions/molecule/files/molecule/.*
 **.pyc
 **/__pycache__/
