--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -57,10 +57,10 @@ jobs:
           sudo usermod -a -G kvm $USER
 
       - name: Setup python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: "3.x"
-          cache: 'pip'
+          cache: pip
 
       - name: Install python dependencies
         run: python -m pip install -r requirements.txt
