fix: Search for configs in `files/<project>/.fluence` (#4)
* Search for configs in files/<project>/.fluence

* Fix path in checks

* Fix this time for sure

* Fix?

* Fix?

* F

* F

* F

* F

* Bump python action

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 **/files/**
-!extentions/molecule/files/molecule
+!extentions/molecule/files/molecule/**
+!extentions/molecule/files/molecule/.fluence/**
 **.pyc
 **/__pycache__/
