--- a/roles/nox/tasks/00-preflight.yml
+++ b/roles/nox/tasks/00-preflight.yml
@@ -45,17 +45,20 @@
   become: false
   delegate_to: localhost
   stat:
-    path: "files/{{ nox_project_dir }}/configs/nox-{{ instance }}_Config.toml"
+    path: "files/{{ nox_project_dir }}/.fluence/configs/nox-{{ instance }}_Config.toml"
   register: _config_stat
   loop: "{{ nox_instances }}"
   loop_control:
     loop_var: instance
     label: "nox-{{ instance }}"
 
+- debug:
+    msg: "{{ _config_stat }}"
+
 - name: check if config file exists
   tags: always
   vars:
-    _config_path: "files/{{ nox_project_dir }}/configs/nox-{{ item.instance }}_Config.toml"
+    _config_path: "files/{{ nox_project_dir }}/.fluence/configs/nox-{{ item.instance }}_Config.toml"
   debug:
     msg: "Checking existence of nox-{{ item.instance }} config at {{ _config_path }}"
   loop: "{{ _config_stat.results }}"
