--- a/roles/ipfs_cli/tasks/00-preflight.yml
+++ b/roles/ipfs_cli/tasks/00-preflight.yml
@@ -7,3 +7,12 @@
       - ipfs_cli_version | length
       - ipfs_cli_version is regex(_semver_regex)
     quiet: true
+
+- name: check "nox_dir" variable
+  tags: always
+  ansible.builtin.assert:
+    that:
+      - nox_dir is defined
+      - nox_dir is string
+      - nox_dir | length
+    quiet: true
