--- a/roles/ipfs_cli/tasks/01-ipfs.yml
+++ b/roles/ipfs_cli/tasks/01-ipfs.yml
@@ -31,7 +31,7 @@
 - name: propagate IPFS binary
   ansible.builtin.copy:
     src: "{{ role_path }}/files/ipfs/{{ _ipfs_version }}/{{ _arch }}/ipfs"
-    dest: "/usr/local/bin/ipfs"
+    dest: "{{ nox_dir }}/ipfs"
     owner: root
     group: root
     mode: 0o755
