Create nox_dir in ipfs_cli role

--- a/roles/ipfs_cli/tasks/01-ipfs.yml
+++ b/roles/ipfs_cli/tasks/01-ipfs.yml
@@ -28,6 +28,14 @@
           - "--strip-components=1"
           - "kubo/ipfs"
 
+- name: create "nox_dir"
+  ansible.builtin.file:
+    path: "{{ nox_dir }}"
+    state: directory
+    owner: "{{ nox_user }}"
+    group: "{{ nox_group }}"
+    mode: 0o755
+
 - name: propagate IPFS binary
   ansible.builtin.copy:
     src: "{{ role_path }}/files/ipfs/{{ _ipfs_version }}/{{ _arch }}/ipfs"
