fix: Copy ipfs to `nox_dir` + various small fixes/cleanups (#6)
* Small fixes

* F

* Update

* Create nox_dir in ipfs_cli role

* F

* fix test

--- a/roles/ipfs_cli/tasks/01-ipfs.yml
+++ b/roles/ipfs_cli/tasks/01-ipfs.yml
@@ -28,10 +28,16 @@
           - "--strip-components=1"
           - "kubo/ipfs"
 
+- name: create "nox_dir"
+  ansible.builtin.file:
+    path: "{{ nox_dir }}"
+    state: directory
+    mode: 0o755
+
 - name: propagate IPFS binary
   ansible.builtin.copy:
     src: "{{ role_path }}/files/ipfs/{{ _ipfs_version }}/{{ _arch }}/ipfs"
-    dest: "/usr/local/bin/ipfs"
+    dest: "{{ nox_dir }}/ipfs"
     owner: root
     group: root
     mode: 0o755
