--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -18,26 +18,26 @@ env:
   FORCE_COLOR: 1
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Run ansible-later
-        uses: patrickjahns/ansible-later-action@v1.3.0
-        with:
-          config: .later.yml
+  #     - name: Run ansible-later
+  #       uses: patrickjahns/ansible-later-action@v1.3.0
+  #       with:
+  #         config: .later.yml
 
-      - name: Run ansible-lint
-        uses: reviewdog/action-ansiblelint@v1
-        with:
-          reporter: github-pr-check
-          fail_on_error: true
+  #     - name: Run ansible-lint
+  #       uses: reviewdog/action-ansiblelint@v1
+  #       with:
+  #         reporter: github-pr-check
+  #         fail_on_error: true
 
   molecule:
     runs-on: ubuntu-latest
 
-    needs: lint
+    # needs: lint
 
     strategy:
       fail-fast: false
