--- a/extensions/molecule/ubuntu2204/molecule.yml
+++ b/extensions/molecule/ubuntu2204/molecule.yml
@@ -11,6 +11,7 @@ provisioner:
   name: ansible
   env:
     ANSIBLE_ROLES_PATH: "../../../roles"
+    ANSIBLE_COLLECTIONS_PATH: "../../"
   playbooks:
     prepare: ../prepare.yml
     converge: ../converge.yml
