--- a/roles/nox/tasks/00-preflight.yml
+++ b/roles/nox/tasks/00-preflight.yml
@@ -11,7 +11,7 @@
 
 - name: check that tar is GNU type # noqa
   tags: always
-  check_tar_type:
+  fluencelabs.provider.check_tar_type:
 
 - name: check "nox_instances" variable
   tags: always
