fix: Check if tar is GNU type (#8)
* Add gnu-tar check

* F

* F

* Fix

* No fucking linter

* F

* F

* F?

* F

* F

* F

* Upload coll

* F

* Fix ansible version

--- a/extensions/molecule/converge.yml
+++ b/extensions/molecule/converge.yml
@@ -5,6 +5,10 @@
     nox_version: "0.16.13"
     nox_project_dir: "molecule"
     ipfs_cli_version: "0.25.0"
+
+  collections:
+    - fluencelabs.provider
+
   tasks:
     - name: Run nox role
       include_role:
