--- a/roles/nox/tasks/00-preflight.yml
+++ b/roles/nox/tasks/00-preflight.yml
@@ -9,6 +9,10 @@
     quiet: true
   when: nox_run_id | string | length
 
+- name: check that tar is GNU type # noqa
+  tags: always
+  fluencelabs.provider.check_tar_type:
+
 - name: check "nox_instances" variable
   tags: always
   ansible.builtin.assert:
