--- a/extensions/molecule/prepare.yml
+++ b/extensions/molecule/prepare.yml
@@ -6,6 +6,10 @@
     nox_project_dir: "molecule"
     nox_instances: [0]
     ipfs_cli_version: "0.25.0"
+
+  collections:
+    - fluencelabs.provider
+
   tasks:
     - name: Run nox role
       include_role:
