--- a/roles/ipfs_cli/tasks/00-preflight.yml
+++ b/roles/ipfs_cli/tasks/00-preflight.yml
@@ -16,3 +16,7 @@
       - nox_dir is string
       - nox_dir | length
     quiet: true
+
+- name: check that tar is GNU type # noqa
+  tags: always
+  fluencelabs.provider.check_tar_type:
