Test debian also

--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -68,6 +68,7 @@ jobs:
       matrix:
         scenario:
           - ubuntu2204
+          - debian12
 
     steps:
       - uses: actions/checkout@v4
