--- a/example/podman-compose.yml
+++ b/example/podman-compose.yml
@@ -39,13 +39,38 @@ services:
         ipv4_address: 172.30.10.11
 
   # services required for Nox to work
-  chain:
-    image: docker.io/fluencelabs/chain-rpc:0.2.20
+  chain-rpc:
+    image: fluencelabs/chain-rpc:0.8.0
     ports:
       - 8545:8545
+    volumes:
+      - chain-rpc:/data
+    environment:
+      LOCAL_CHAIN_BLOCK_MINING_INTERVAL: 1
+    healthcheck:
+      test: "curl -s -X POST 'http://localhost:8545' -H 'Content-Type:
+        application/json' --data '{\"jsonrpc\":\"2.0\",
+        \"method\":\"eth_chainId\", \"params\":[], \"id\":1}' | jq -e '.result
+        != null'"
+      interval: 8s
+      timeout: 10s
+      retries: 20
     networks:
       demo:
         ipv4_address: 172.30.10.85
+
+  chain-deploy-script:
+    image: fluencelabs/chain-deploy-script:0.8.0
+    environment:
+      CHAIN_RPC_URL: http://chain-rpc:8545
+      MAX_FAILED_RATIO: "9999"
+      IS_MOCKED_RANDOMX: "true"
+      MIN_DURATION: 0
+    depends_on:
+      chain-rpc:
+        condition: service_healthy
+    networks:
+      demo:
 
   ipfs:
     image: docker.io/ipfs/kubo:v0.26.0
