--- a/.github/workflows/ansible.yml
+++ b/.github/workflows/ansible.yml
@@ -34,40 +34,15 @@ jobs:
   #         reporter: github-pr-check
   #         fail_on_error: true
 
-  collection:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-          cache: pip
-
-      - name: Install python dependencies
-        run: python -m pip install -r requirements.txt
-
-      - name: Build collection
-        run: ansible-galaxy collection build .
-
-      - name: Upload collection
-        uses: actions/upload-artifact@v4
-        with:
-          path: fluencelabs-provider-*.tar.gz
-          name: collection
-          if-no-files-found: error
-
   molecule:
     runs-on: ubuntu-latest
-
-    needs: collection
 
     strategy:
       fail-fast: false
       matrix:
         scenario:
           - ubuntu2204
+          - debian12
 
     steps:
       - uses: actions/checkout@v4
@@ -89,14 +64,5 @@ jobs:
       - name: Install python dependencies
         run: python -m pip install -r requirements.txt
 
-      - name: Download collection
-        uses: actions/download-artifact@v4
-        with:
-          name: collection
-
-      - name: Install collection
-        run: ansible-galaxy collection install fluencelabs-provider-*.tar.gz
-
       - name: Run ${{ matrix.scenario }} scenario
-        working-directory: extensions
         run: molecule test --scenario-name "${{ matrix.scenario }}"
