--- a/molecule/files/molecule/provider.yaml
+++ b/molecule/files/molecule/provider.yaml
@@ -4,16 +4,12 @@
 
 # Documentation: https://github.com/fluencelabs/cli/tree/main/docs/configs/provider.md
 
-version: 0
+version: 8
 
 env: local
 
 computePeers:
-  nox-0:
-    computeUnits: 1
-  nox-1:
-    computeUnits: 1
-  nox-2:
+  peer-0:
     computeUnits: 1
 
 offers:
